<resources>
    <string name="app_name">Coin Bank</string>

    <!--Tela Login-->
    <string name="wellcome_login">Seja bem vindo!</string>
    <string name="il_login">Login</string>
    <string name="il_password">Senha</string>
    <string name="forgot_password">ESQUECI MINHA SENHA</string>
    <string name="button_login">ENTRAR</string>
    <string name="question_login">Ainda não é cadastrado?</string>
    <string name="register_login">CADASTRE-SE</string>

    <!--Tela Esqueci senha-->
    <string name="question_forgot_password">Esqueceu sua senha?</string>
    <string name="tv_description_forget_passoword">Enviaremos um código de recuperação para\no seu
        email ex***@mail.com\n\nPor favor preencha o endereço:</string>
    <string name="send_button">ENVIAR</string>
    <string name="il_forgot_password">E-mail</string>

    <!--Tela de Cadastro-->
    <string name="title_register">Vamos preencher o cadastro!</string>
    <string name="il_name_register">Nome</string>
    <string name="il_email_register">E-mail</string>
    <string name="confirm_email_register">Confirmar E-mail</string>
    <string name="password_register">Senha</string>
    <string name="confirm_password_register">Confirmar Senha</string>
    <string name="cpf_register">CPF</string>
    <string name="date_birth_register">Data de Nascimento</string>
    <string name="phone_register">Telefone</string>
    <string name="check_terms_use">Eu concordo com os termos e condições</string>
    <string name="button_register">Cadastrar</string>

    <!--Tela mudar senha-->
    <string name="password_current">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="new_password_confirm">Confirme a nova senha</string>
    <string name="button_change_password">ALTERAR</string>

    <!--Tela Sobre, Termos de uso e Politica de privacidade-->

    <string name="tv_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.</string>

    <!--Tela Contato-->
    <string name="talk_support_question">FALE COM A GENTE!</string>
    <string name="description_contact">Dúvidas, sugestões ou reclamações?\nEntre em contato e
        \nretornaremos pelo email informado!</string>
    <string name="message_contact">Mensagem</string>

    <!--Tela de Acompanhamento de proposta-->
    <string name="text_status">SEU PEDIDO FOI</string>
    <string name="tv_status">APROVADO</string>
    <string name="message_status">Mas não fique chateado!\nVocê ainda pode\nrealizar uma nova
        solicitação!</string>
    <string name="message_status_accept">Segue abaixo algumas informaçoes\nsobre o valor
        liberado.</string>
    <string name="button_back">VOLTAR</string>
    <string name="button_accept">ACEITAR</string>
    <string name="date_first">Data da primeira parcela:\n10/10/2020</string>
    <string name="value_status">Valor solicitado:\nR$7500,00</string>
    <string name="value_interest">Valor total a pagar (juros de 2,0% a.m):</string>

    <!--Menu-->
    <string name="menu_info">INFO</string>
    <string name="menu_home">HOME</string>

    <!--Menu Informações-->
    <string name="change_password">Alterar Senha</string>
    <string name="about_info">Sobre</string>
    <string name="pp_info">Políticas de Privacidade</string>
    <string name="terms_use_info">Termos de Uso</string>
    <string name="contact_info">Contato</string>
    <string name="exit_info">Sair</string>

    <!--Bottom Sheet-->
    <string name="question_bottom_sheet">DESEJA REALMENTE SAIR?</string>
    <string name="button_no">NÃO</string>
    <string name="button_yes">SIM</string>

    <!--Home-->
    <string name="exit_home">Sair</string>
    <string name="value">Valor</string>
    <string name="monthly_income">Qual sua renda mensal?</string>
    <string name="many_parcels">Quantas Parcelas?</string>
    <string name="first_parcels">Data da primeira parcela</string>
    <string name="reason">Qual finalidade?</string>
    <string name="follow">ACOMPANHAR PROPOSTA!</string>
    <string name="button_send_proposal">Solicitar um empréstimo!</string>


</resources>