<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/iv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_login"
        app:layout_constraintEnd_toEndOf="@+id/iv_login"
        app:layout_constraintStart_toStartOf="@+id/iv_login"
        app:layout_constraintTop_toBottomOf="@+id/iv_login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_wellcome"
        app:layout_constraintBottom_toTopOf="@+id/tv_question_login"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/il_login"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/il_password"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/il_login"
            app:layout_constraintEnd_toEndOf="@+id/il_login"
            app:layout_constraintTop_toBottomOf="@+id/il_login"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/il_password"
            app:layout_constraintTop_toBottomOf="@+id/il_password"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
            android:layout_marginTop="25dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_question_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        app:fontFamily="@font/font_exo_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_login"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/view_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login"
            app:fontFamily="@font/font_exo_bold"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>