<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.RegisterActivity"
    android:background="@color/colorPrimaryDark">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/tb_register"
                    style="@style/ToolBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="CADASTRO"
                    app:titleTextColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_register"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tb_register"
                    android:layout_marginTop="12dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_name_register"
                    android:hint="@string/il_name_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_register"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_name_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_email_register"
                    android:hint="@string/il_email_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_name_register"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_email_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_confirm_email_register"
                    android:hint="@string/confirm_email_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_email_register"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_confirm_email_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_password_register"
                    android:hint="@string/password_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_confirm_email_register"
                    android:layout_marginTop="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_confirm_password_register"
                    android:hint="@string/confirm_password_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_password_register"
                    android:layout_marginTop="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_confirm_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_cpf_register"
                    android:hint="@string/cpf_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_confirm_password_register"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_cpf_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_date_birth"
                    android:hint="@string/date_birth_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_cpf_register"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_date_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_phone_register"
                    android:hint="@string/phone_register"
                    style="@style/TextInputLayoutDark"
                    app:layout_constraintStart_toStartOf="@+id/il_name_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_name_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_date_birth"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_phone_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cb_term_use"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/check_terms_use"
                    app:layout_constraintStart_toStartOf="@+id/il_phone_register"
                    app:layout_constraintEnd_toEndOf="@+id/il_phone_register"
                    app:layout_constraintTop_toBottomOf="@+id/il_phone_register"
                    android:textColor="@color/colorWhite"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/button_send_forgot_password"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send_button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_term_use"
                    android:layout_marginTop="15dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>