<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.InfoFragment"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_info"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_change_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/change_password"
                android:drawableStart="@drawable/ic_change_password"
                android:layout_marginHorizontal="10dp"
                style="@style/textInfoMenu"/>

            <View
                android:id="@+id/view_change_password"
                style="@style/viewInformações"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_password"
                android:background="@color/colorPrimaryDark"
                android:layout_marginVertical="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_about_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_change_password"
                android:text="@string/about_info"
                android:drawableStart="@drawable/ic_icon_about"
                android:layout_marginHorizontal="8dp"
                style="@style/textInfoMenu"/>

            <View
                android:id="@+id/view_about_info"
                style="@style/viewInformações"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_info"
                android:background="@color/colorPrimaryDark"
                android:layout_marginVertical="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_pp_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_about_info"
                android:text="@string/pp_info"
                android:drawableStart="@drawable/ic_terms"
                android:layout_marginHorizontal="10dp"
                style="@style/textInfoMenu"/>

            <View
                android:id="@+id/view_pp_info"
                style="@style/viewInformações"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pp_info"
                android:background="@color/colorPrimaryDark"
                android:layout_marginVertical="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_terms_use_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_pp_info"
                android:text="@string/terms_use_info"
                android:drawableStart="@drawable/ic_terms"
                android:layout_marginHorizontal="10dp"
                style="@style/textInfoMenu"/>

            <View
                android:id="@+id/view_terms_use_info"
                style="@style/viewInformações"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_terms_use_info"
                android:background="@color/colorPrimaryDark"
                android:layout_marginVertical="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_contact_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_terms_use_info"
                android:text="@string/contact_info"
                android:drawableStart="@drawable/ic_contact"
                android:layout_marginHorizontal="5dp"
                style="@style/textInfoMenu"/>

            <View
                android:id="@+id/view_contact_info"
                style="@style/viewInformações"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_info"
                android:background="@color/colorPrimaryDark"
                android:layout_marginVertical="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_exit_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_contact_info"
                android:text="@string/exit_info"
                android:drawablePadding="25dp"
                android:drawableStart="@drawable/ic_exit"
                android:layout_marginHorizontal="10dp"
                style="@style/textInfoMenu"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>